...
        recents.submenu = recent
        recent.delegate = self
        file.addItem(recents)
        file.addItem(.separator())
        add("Close", #selector(NSWindow.performClose(_:)), key: "w", to: file)
        add("Reveal in Finder", #selector(DocumentWindowController.revealDocument(_:)), to: file)
        let edit = menu("Edit")
        add("Copy", #selector(NSText.copy(_:)), key: "c", to: edit)
        add("Select All", #selector(NSText.selectAll(_:)), key: "a", to: edit)
        edit.addItem(.separator())
        let find = NSMenu(title: "Find")
        let findItem = NSMenuItem(title: "Find", action: nil, keyEquivalent: "")
        findItem.submenu = find
        edit.addItem(findItem)
...
